src/components/sbb-time-input/sbb-time-input.scss
@use '../../global/styles' as sbb;

// Default component properties, defined for :host. Properties which can not
// travel the shadow boundary are defined through this mixin
@include sbb.host-component-properties;

:host {
  --sbb-time-input-width: #{sbb.px-to-rem-build(42)};

  @include sbb.mq($from: medium) {
    --sbb-time-input-width: #{sbb.px-to-rem-build(48)};
  }

  display: inline-block;
}

input {
  @include sbb.input-reset;

  width: var(--sbb-time-input-width);
  font-size: var(--sbb-font-size-text-m);
  line-height: var(--sbb-typo-line-height-body-text);
  color: var(--sbb-form-field-text-color);
}

