style: fix for sbb-form-field collapse property

--- a/src/components/sbb-time-input/sbb-time-input.scss
+++ b/src/components/sbb-time-input/sbb-time-input.scss
@@ -5,10 +5,10 @@
 @include sbb.host-component-properties;
 
 :host {
-  --sbb-time-input-width: #{sbb.px-to-rem-build(42)};
+  --sbb-time-input-max-width: #{sbb.px-to-rem-build(42)};
 
   @include sbb.mq($from: medium) {
-    --sbb-time-input-width: #{sbb.px-to-rem-build(48)};
+    --sbb-time-input-max-width: #{sbb.px-to-rem-build(48)};
   }
 
   display: inline-block;
@@ -17,7 +17,7 @@
 input {
   @include sbb.input-reset;
 
-  width: var(--sbb-time-input-width);
+  max-width: var(--sbb-time-input-max-width);
   font-size: var(--sbb-font-size-text-m);
   line-height: var(--sbb-typo-line-height-body-text);
   color: var(--sbb-form-field-text-color);
